Bruk tidslinjer internt i Kravdokumentfravær (#6377)
* KravDokumentFravær oppretthold konsistens underveis
* KravDokumentFravær bruker tidslinje internt isdf til/fra List
* KravDokumentFravær død kode, konflikt IM/søknad må uansett utledes på høyere nivå siden IM kan komme som flere arbeidsforhold